--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="#7417bf">
+    android:background="#607417bf">
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="50dp"
+        android:layout_marginTop="50dp"
         android:background="#FFFFFF" />
+
 
     <ImageButton
         android:id="@+id/imgBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/spinner"
+        android:layout_toRightOf="@+id/spinner"
         android:layout_centerVertical="true"
-        android:layout_margin="0dp"
-        android:src="@drawable/btn"/>
+        android:src="@drawable/btn" />
+
+    <!--android:layout_alignRight="@+id/spinner"-->
 
     <TextView
         android:id="@+id/txt"
@@ -40,7 +48,5 @@
         android:src="@drawable/ic_img"
         android:layout_above="@+id/txt"
         android:layout_centerHorizontal="true"/>
-
-
 
 </RelativeLayout>
