--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,11 @@
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
-
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+<!--    style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/homeSpinner"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -27,18 +28,17 @@
         android:id="@+id/imgBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/spinner"
+        android:layout_toRightOf="@+id/homeSpinner"
         android:layout_centerVertical="true"
         android:src="@drawable/btn" />
 
-    <!--android:layout_alignRight="@+id/spinner"-->
 
     <TextView
-        android:id="@+id/txt"
+        android:id="@+id/homeTxt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="50dp"
-        android:layout_above="@+id/spinner"
+        android:layout_above="@+id/homeSpinner"
         android:textColor="#FFFFFF"/>
 
     <ImageView
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_img"
-        android:layout_above="@+id/txt"
+        android:layout_above="@+id/homeTxt"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
