--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone"/>
-<!--    style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+<!-- android:visibility="gone"
+ style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
     <Spinner
         android:id="@+id/homeSpinner"
         android:layout_width="150dp"
